typed-i18n/tests/compile-fail/unsupported_str_conversion.stderr
error: unsupported str conversion: unknown
 --> tests/compile-fail/unsupported_str_conversion.rs:5:32
  |
5 | #[typed_i18n(builder = "bool", str_conversion = "unknown")]
  |                                ^^^^^^^^^^^^^^
